fix: fix tab layout issue with sidebar

--- a/src/components/MapLens/MapLens.scss
+++ b/src/components/MapLens/MapLens.scss
@@ -2,7 +2,7 @@
 
 .map-lens {
   position: absolute;
-  top: 91px;
+  top: $mainBodyTop;
   bottom: 0;
   right: 0;
   left: 0;
